Fix: navbar spacing

--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -30,6 +30,9 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+.navbar-nav {
+  margin-right: 2rem;
+}
 
 /* About Page styling */
 #about {
